# protoplasm

./: Cargo.toml
src/: datatype.rs  lib.rs  mutagen_args.rs  preloader.rs  prelude.rs  profiler.rs  util.rs
src/datatype/: automata_rules.rs  buffers.rs  char_types.rs  color_blend_functions.rs  colors.rs  complex.rs  constraint_resolvers.rs  continuous.rs  discrete.rs  distance_functions.rs  iterative_results.rs  matrices.rs  noisefunctions.rs  point_sets.rs  points.rs  reseeders.rs  rules.rs
src/traits/: index.rs  lerpable.rs  ranged.rs
